<resources>
    <string name="app_name">IVEPOS</string>
    <string name="search">Search</string>
    <string name="enter">Enter</string>
    <string name="action_general">Sales report</string>
    <string name="action_itemwise">Product report</string>
    <string name="action_userwise">Seller report</string>
    <string name="action_customerwise">Customer list</string>
    <string name="action_discountwise">Discount list</string>
    <string name="action_cancellation">Refunds report</string>
    <string name="action_syncsales">Sync Sales</string>
    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_msg_result">Result</string>
    <string name="title_msg_description">Description</string>
    <string name="action_export">Save as excel</string>
    <string name="action_email">Send report</string>
    <string name="action_table">Table</string>
    <string name="action_schedule">Schedule Backup</string>
    <string name="action_cancellation1">Returns/Refunds</string>
    <string name="barcode_printing">Barcode printing</string>
    <string name="item_printing">Print items</string>
    <string name="modifier_printing">Modifier list</string>
    <string name="min_stock">Min. Stock</string>
    <string name="csv">CSV</string>
    <string name="mail">E-Mail</string>
    <string name="vendors">Vendors</string>
    <string name="indent">Indent</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="menu_upload">Menu upload</string>
    <string name="availablity">Restaurant availability</string>
    <string name="csv_download">Download CSV(Data)</string>
    <string name="csv_upload">Upload CSV(Data)</string>
    <string name="inventory_indent">Inventory Indent</string>
    <string name="stock_transfer">Stock Transfer</string>
    <string name="action_logout">Log off</string>
    <string name="action_reset">Smart Refill</string>
    <string name="action_server">POS IP</string>
    <string name="action_syncnow">Sync now</string>
    <string name="action_help">Help video</string>
    <string name="action_neworder">Online orders</string>
    <string name="action_neworder1">Online orders</string>
    <string name="action_promotions">Promotions</string>
    <string name="action_write_off">Write Off reports</string>
    <string name="action_credit">Pay Later</string>
    <string name="action_usbbt">Bluetooth printer</string>
    <string name="action_network">Network/Wifi printer(KOT)</string>
    <string name="action_network2">Network/Wifi printer(Counter)</string>
    <string name="action_counter">Counter</string>
    <string name="action_kot1">KOT1</string>
    <string name="action_kot2">KOT2</string>
    <string name="action_kot3">KOT3</string>
    <string name="action_kot4">KOT4</string>
    <string name="action_enter_manually">Enter IP Address</string>
    <string name="dialog_action_dismiss">OK</string>
    <string name="action_general_pref">General</string>
    <string name="action_billsettings_pref">Bill settings</string>
    <string name="action_speeddial_pref">Speed dial</string>
    <string name="action_smartinventory_pref">Smart Inventory</string>
    <string name="action_network_pref">Network</string>
    <string name="linkterm">By continuing, you are indicating that you accept our <a href="https://ivepos.com/terms-and-conditions/"> terms and conditions </a> ,  and <a href="https://ivepos.com/privacy-policy/">privacy policy</a>
    </string>
    <string name="Button25">Clear</string>
    <string name="Rs">\u20B9</string>
    <string name="insert"> ₹</string>
    <string name="cafe_latte">Cafe latte</string>
    <string name="cafe_mocha">Cafe mocha</string>
    <string name="cappuchino">Cappuchino</string>
    <string name="chocolate_shake">Chocolate shake</string>
    <string name="coke">Coke 300ml</string>
    <string name="cold_coffee">Cold coffee</string>
    <string name="espresso">Espresso</string>
    <string name="filter_coffee">Filter coffee</string>
    <string name="grape_juice">Grape juice</string>
    <string name="green_tea">Green tea</string>
    <string name="hot_chocolate">Hot chocolate</string>
    <string name="iced_tea">Iced tea</string>
    <string name="mango_juice">Mango juice</string>
    <string name="mixed_fruitpunch">Mixed fruitpunch</string>
    <string name="orange_punch">Orange punch</string>
    <string name="strawberry_punch">Strawberry punch</string>
    <string name="tea">Tea</string>
    <string name="vanilla_shake">Vanilla shake</string>
    <string name="idly">Idly</string>
    <string name="dosa">Dosa</string>
    <string name="masala_dosa">Masala dosa</string>
    <string name="qest_mark">"?"</string>
    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low.\n</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal.\nConnection get lost.\n</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover.\n</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper.\n</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch.\n</string>
    <string name="handlingmsg_err_autocutter">Please remove jammed paper and close roll paper cover.\nRemove any jammed paper or foreign substances in the printer, and then turn the printer off and turn the printer on again.\n</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch.\n</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer.\nIf same errors occurred even power cycled, the printer may out of order.</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off. \n</string>
    <string name="handlingmsg_err_head">Print head of printer is hot.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot.\n</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot.\n</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper.\n</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty.\n</string>
    <string name="handlingmsg_err_offline">Printer is offline.\n</string>
    <string name="printerseries_t82">TM-T82 Series</string>
    <string name="lang_ank">ANK</string>
    <string-array name="food_delivery_names">
        <item>All</item>
        <item>Swiggy</item>
        <item>Zomato</item>
        <item>Uber eats</item>
        <item>Food panda</item>
    </string-array>
    <string-array name="reason_reject_order">
        <item>No Stock</item>
        <item>Others</item>
    </string-array>
    <string-array name="food_delivery_options">
        <item>Preparing</item>
        <item>picked up</item>
        <item>delivered</item>
        <item>others</item>
    </string-array>
    <string name="choose_category">Choose Category</string>
    <string name="category">Category</string>
    <string name="choose_discount">Choose Discount</string>
    <string-array name="discount_type">
        <item>%</item>
        <item>\u20B9</item>
    </string-array>
    <string name="choose_unit">Choose Unit</string>
    <string name="unit_type">Unit type</string>
    <string name="choose_email">Choose Email</string>
    <string-array name="email_type">
        <item>Gmail</item>
        <item>Yahoo</item>
        <item>Hotmail and Outlook</item>
        <item>Office365</item>
    </string-array>
    <string name="choose_orderlist">Choose Orderlist</string>
    <string name="orderlist">Orderlist</string>
    <string name="choose_cancellation">Choose Cancellation</string>
    <string-array name="cancellation">
        <item>Descending</item>
        <item>Ascending</item>
    </string-array>
    <string name="choose_cancellation1">Choose Cancellation</string>
    <string-array name="cancellation1">
        <item>All</item>
        <item>Cash</item>
        <item>Card</item>
        <item>Pay Later</item>
    </string-array>
    <string-array name="cancellation4">
        <item>All</item>
        <item>Paytm</item>
        <item>Mobikwik</item>
        <item>Freecharge</item>
    </string-array>
    <string-array name="cancellation5">
        <item>UPI QR</item>
    </string-array>
    <string-array name="cancellation6">
        <item>All</item>
        <item>Sodexo</item>
        <item>Zeta</item>
        <item>Ticket</item>
    </string-array>
    <string-array name="cancellation7">
        <item>All</item>
        <item>Cheque</item>
    </string-array>
    <string name="choose_cancellation2">Choose Cancellation</string>
    <string-array name="cancellation2">
        <item>All</item>
        <item>Dine-in</item>
        <item>Takeaway</item>
        <item>Home delivery</item>
    </string-array>
    <string name="choose_cancellation22">Choose Cancellation</string>
    <string-array name="cancellation22">
        <item>All</item>
        <item>General</item>
        <item>Home delivery</item>
    </string-array>
    <string name="choose_cancellation21">Choose Cancellation</string>
    <string-array name="cancellation21">
        <item>All</item>
        <item>Swiggy</item>
        <item>Zomato</item>
        <item>Food Panda</item>
    </string-array>
    <string-array name="country_selection21">
        <item>Dine-in</item>
        <item>Takeaway</item>
        <item>Home delivery</item>
    </string-array>
    <string-array name="country_selection21_retail">
        <item>General</item>
        <item>Home delivery</item>
    </string-array>
    <string name="choose_cancellation3">Choose Cancellation</string>
    <string-array name="cancellation3">
        <item>Items</item>
        <item>Category</item>
    </string-array>
    <string-array name="billing">
        <item>Fast food</item>
        <item>Fine dine</item>
        <item>Retail</item>
    </string-array>
    <string-array name="taxesss">
        <item>All</item>
        <item>Globaltax</item>
        <item>Itemtax</item>
    </string-array>
    <string name="choose_itemwmodifier">Choose ItemModifier Perform</string>
    <string-array name="itemmodifier_perform">
        <item>Items</item>
        <item>Modifiers</item>
    </string-array>
    <string name="choose_itemwiseperform">Choose Itemwise Perform</string>
    <string-array name="itemwise_perform">
        <item>High to low</item>
        <item>Low to high</item>
    </string-array>
    <string name="choose_cancelwise_filter">Choose Cancelwise Perform</string>
    <string-array name="cancelwise_fliter">
        <item>All</item>
        <item>Damaged/Spoiled</item>
        <item>Delayed</item>
        <item>Changed mind</item>
        <item>Accidental charge</item>
        <item>Other</item>
    </string-array>
    <string name="choose_menuwise">Choose Menuwise</string>
    <string name="action_modifier">Modifier</string>
    <string name="Button10">2</string>
    <string name="Button11">3</string>
    <string name="Button9">1</string>
    <string name="time_title">Time</string>
    <string name="current_stock">Current stock :</string>
    <string name="date">Date</string>
    <string name="avg_price">Avg. price</string>
    <string name="_unit"> unit</string>
    <string name="barcode">Barcode</string>
    <string name="ingredient">Ingredient</string>
    <string name="opt_required">Opt. required</string>
    <string name="max_stock">Max. stock</string>
    <string name="hiiiiiiiiii">hiiiiiiiiii</string>
</resources>