<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_export"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/action_export"
        app:showAsAction="always"/>

    <item android:id="@+id/action_exportmail"
        android:icon="@drawable/ic_send_black_24dp"
        android:title="@string/action_email"
        app:showAsAction="always"/>

<item
    android:visible="true"
    android:menuCategory="system"
    android:icon="@drawable/ic_more_vert_black_24dp"
    app:showAsAction="always" >
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <!-- Search, should appear as action button -->
    <item android:id="@+id/sync_sales"
        android:orderInCategory="101"
        android:title="@string/action_syncsales"
        />

    <item android:id="@+id/action_itemwise"
          android:orderInCategory="101"
          android:icon="@drawable/ic_widgets_black_24dp"
          android:title="@string/action_itemwise"
          android:visible="false"
        />
    <item android:id="@+id/action_userwise"
        android:orderInCategory="102"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/action_userwise"
        android:visible="false"
        />
    <item android:id="@+id/action_cancellation"
        android:orderInCategory="103"
        android:icon="@drawable/ic_returns_refunds_black_24dp"
        android:title="@string/action_cancellation"
        android:visible="false"
        />
    <item
        android:orderInCategory="104" android:visible="false"
        android:icon="@drawable/ic_customer_black_24dp"
        android:title="@string/action_customerwise"

        />
    <item android:id="@+id/action_discountwise"
        android:orderInCategory="105"
        android:icon="@drawable/ic_local_offer_black_24dp"
        android:title="@string/action_discountwise"
        android:visible="false"
        />



    <!-- Settings, should always be in the overflow -->
    <!-- <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never" /> -->

</menu></item></menu>